# scene-editor

./: .gitignore  CMakeLists.txt  README.md  mesh_file_format.txt
data/: untitled.mbin
include/: mesh.hpp  mesh_io.hpp  mesh_renderer.hpp  mesh_vertex_buffer_writer.hpp  renderer.hpp  vector_math.hpp  vertex_buffer.hpp
include/mesh/: attribute.hpp  attribute_buffer.hpp  attribute_iterator.hpp  attribute_view.hpp  component_type_helper.hpp
src/: console_thread.cpp  console_thread.hpp  main.cpp  mesh_io.cpp  mesh_renderer.cpp  mesh_vertex_buffer_writer.cpp
src/shaders/: fragment.glsl  vertex.glsl
